Fixes SonarCloud